feat: Enhance Markdown support in messaging
- Added MarkdownEscaper utility to escape special characters for Telegram Markdown mode.
- Updated ClubRegistrationService to use Markdown formatting in profile previews and messages.
- Modified LikeMatchService to send match notifications with Markdown formatting.
- Adjusted tests across services to verify Markdown formatting in messages.
- Ensured that all relevant sender methods now accept a Markdown parameter for consistent message formatting.