@@ -15,6 +15,7 @@ import org.osbo.bots.model.repositories.ProfileRepository;
 import org.osbo.bots.model.repositories.UserRepository;
 import org.osbo.bots.util.AgeCalculator;
 import org.osbo.bots.util.LookingForOption;
+import org.osbo.bots.util.MarkdownEscaper;
 import org.springframework.stereotype.Component;
 
 import io.micrometer.common.lang.NonNull;
@@ -27,6 +28,8 @@ import io.micrometer.common.lang.NonNull;
 public class ClubProfileEditService {
 
     public static final String COMMAND_EDIT_PROFILE = "/editar_perfil";
+    public static final String COMMAND_CLUB = "/club";
+    public static final String COMMAND_START = "/start";
 
     public static final String CALLBACK_EDIT_NAME = "club_edit_name";
     public static final String CALLBACK_EDIT_BIRTHDATE = "club_edit_birthdate";
@@ -40,6 +43,7 @@ public class ClubProfileEditService {
     public static final String CALLBACK_EDIT_PHOTO = "club_edit_photo";
     public static final String CALLBACK_EDIT_CONTACT = "club_edit_contact";
     public static final String CALLBACK_EDIT_FINISH = "club_edit_finish";
+    public static final String CALLBACK_EDIT_CANCEL = "club_edit_cancel";
 
     public static final String STATE_EDIT_MENU = "club_edit_menu";
     public static final String STATE_EDIT_NAME = "club_edit_name";
@@ -69,12 +73,14 @@ public class ClubProfileEditService {
     private final NqueueForSend sender;
     private final ProfileRepository profileRepository;
     private final UserRepository userRepository;
+    private final ClubRegistrationService clubRegistrationService;
 
     public ClubProfileEditService(NqueueForSend sender, ProfileRepository profileRepository,
-            UserRepository userRepository) {
+            UserRepository userRepository, ClubRegistrationService clubRegistrationService) {
         this.sender = sender;
         this.profileRepository = profileRepository;
         this.userRepository = userRepository;
+        this.clubRegistrationService = clubRegistrationService;
     }
 
     /**
@@ -94,6 +100,10 @@ public class ClubProfileEditService {
         }
 
         if (comando != null && comando.startsWith("club_edit_")) {
+            if (COMMAND_CLUB.equals(update.getText()) || COMMAND_START.equals(update.getText())) {
+                cancelEdit(user, update);
+                return true;
+            }
             handleEditState(user, update);
             return true;
         }
@@ -113,25 +123,47 @@ public class ClubProfileEditService {
         sendEditMenu(update.getChatid(), profile);
     }
 
+    private void cancelEdit(User user, MessageUpdate update) {
+        Profile profile = requireApprovedProfile(update.getChatid());
+        if (COMMAND_CLUB.equals(update.getText()) && profile != null) {
+            user.setComando("start");
+            clubRegistrationService.sendApprovedStatus(update.getChatid(), profile);
+            return;
+        }
+        sender.sendMarkdown(update.getChatid(), "🏠 *Volviendo al menú principal.*", true,
+                List.of(List.of(new Button("Volver al inicio", "/start"))));
+        user.setComando("start");
+    }
+
     private void sendEditMenu(String chatid, Profile profile) {
         String text = buildMenuText(profile);
-        sender.send(chatid, text, true, buildMenuButtons());
+        List<List<Button>> buttons = buildMenuButtons();
+        if (profile.getPhotoFileId() != null && !profile.getPhotoFileId().isBlank()) {
+            sender.sendPhoto(chatid, profile.getPhotoFileId(), text, true, buttons, "Markdown");
+        } else {
+            sender.sendMarkdown(chatid, text, true, buttons);
+        }
     }
 
     private String buildMenuText(Profile profile) {
         StringBuilder text = new StringBuilder();
-        text.append("Editá tu perfil. Seleccioná el campo que querés cambiar:\n\n");
-        text.append("Nombre: ").append(profile.getName()).append("\n");
-        text.append("Edad: ").append(profile.getAge()).append("\n");
-        text.append("Género: ").append(translateGender(profile.getGender())).append("\n");
-        text.append("Orientación: ").append(translateOrientation(profile.getOrientation())).append("\n");
-        text.append("Ciudad: ").append(profile.getCity()).append("\n");
-        text.append("Sobre vos: ").append(profile.getDescription()).append("\n");
-        text.append("Gustos: ").append(profile.getTastes()).append("\n");
-        text.append("Personalidad: ").append(profile.getTraits()).append("\n");
-        text.append("Buscás: ").append(LookingForOption.translate(profile.getLookingFor())).append("\n");
-        text.append("Contacto: ").append(formatContact(profile)).append("\n");
+        text.append("📝 *Editá tu perfil*\n");
+        text.append("Seleccioná el campo que querés cambiar:\n\n");
+        text.append("*👤 Nombre:* ").append(escapeMarkdown(profile.getName())).append("\n");
+        text.append("*🎂 Edad:* ").append(profile.getAge()).append(" años\n");
+        text.append("*⚧ Género:* ").append(translateGender(profile.getGender())).append("\n");
+        text.append("*💕 Orientación:* ").append(translateOrientation(profile.getOrientation())).append("\n");
+        text.append("*📍 Ciudad:* ").append(escapeMarkdown(profile.getCity())).append("\n");
+        text.append("*📝 Sobre vos:* ").append(escapeMarkdown(profile.getDescription())).append("\n");
+        text.append("*🎸 Gustos:* ").append(escapeMarkdown(profile.getTastes())).append("\n");
+        text.append("*🧠 Personalidad:* ").append(escapeMarkdown(profile.getTraits())).append("\n");
+        text.append("*💘 Buscás:* ").append(LookingForOption.translate(profile.getLookingFor())).append("\n");
+        text.append("*📞 Contacto:* ").append(escapeMarkdown(formatContact(profile))).append("\n");
         return text.toString();
+    }
+
+    private String escapeMarkdown(String text) {
+        return MarkdownEscaper.escape(text);
     }
 
     private String formatContact(Profile profile) {
@@ -150,22 +182,34 @@ public class ClubProfileEditService {
 
     private List<List<Button>> buildMenuButtons() {
         return Arrays.asList(
-                Arrays.asList(new Button("Nombre", CALLBACK_EDIT_NAME),
-                        new Button("Fecha de nacimiento", CALLBACK_EDIT_BIRTHDATE),
-                        new Button("Género", CALLBACK_EDIT_GENDER)),
-                Arrays.asList(new Button("Orientación", CALLBACK_EDIT_ORIENTATION),
-                        new Button("Ciudad", CALLBACK_EDIT_CITY),
-                        new Button("Descripción", CALLBACK_EDIT_DESCRIPTION)),
-                Arrays.asList(new Button("Gustos", CALLBACK_EDIT_TASTES),
-                        new Button("Personalidad", CALLBACK_EDIT_TRAITS),
-                        new Button("Buscando", CALLBACK_EDIT_LOOKING_FOR)),
-                Arrays.asList(new Button("Foto", CALLBACK_EDIT_PHOTO),
-                        new Button("Contacto", CALLBACK_EDIT_CONTACT),
-                        new Button("Terminar", CALLBACK_EDIT_FINISH)));
+                Arrays.asList(new Button("👤 Nombre", CALLBACK_EDIT_NAME),
+                        new Button("🎂 Fecha de nacimiento", CALLBACK_EDIT_BIRTHDATE),
+                        new Button("⚧ Género", CALLBACK_EDIT_GENDER)),
+                Arrays.asList(new Button("💕 Orientación", CALLBACK_EDIT_ORIENTATION),
+                        new Button("📍 Ciudad", CALLBACK_EDIT_CITY),
+                        new Button("📝 Descripción", CALLBACK_EDIT_DESCRIPTION)),
+                Arrays.asList(new Button("🎸 Gustos", CALLBACK_EDIT_TASTES),
+                        new Button("🧠 Personalidad", CALLBACK_EDIT_TRAITS),
+                        new Button("💘 Buscando", CALLBACK_EDIT_LOOKING_FOR)),
+                Arrays.asList(new Button("📷 Foto", CALLBACK_EDIT_PHOTO),
+                        new Button("📞 Contacto", CALLBACK_EDIT_CONTACT),
+                        new Button("✅ Terminar", CALLBACK_EDIT_FINISH)),
+                Arrays.asList(new Button("⬅️ Volver al menú del club", COMMAND_CLUB),
+                        new Button("🏠 Volver al inicio", COMMAND_START)));
     }
 
     private void handleEditState(User user, MessageUpdate update) {
         String comando = user.getComando();
+        if (CALLBACK_EDIT_CANCEL.equals(update.getText())) {
+            Profile profile = requireApprovedProfile(update.getChatid());
+            if (profile != null) {
+                user.setComando(STATE_EDIT_MENU);
+                sendEditMenu(update.getChatid(), profile);
+            } else {
+                user.setComando("start");
+            }
+            return;
+        }
         switch (comando) {
             case STATE_EDIT_MENU -> handleMenuSelection(user, update);
             case STATE_EDIT_NAME -> handleName(user, update);
@@ -198,68 +242,109 @@ public class ClubProfileEditService {
         switch (text) {
             case CALLBACK_EDIT_NAME -> {
                 user.setComando(STATE_EDIT_NAME);
-                sender.send(update.getChatid(), "Escribí tu nuevo nombre o apodo:");
+                sendFieldPrompt(update.getChatid(), "👤 Nombre", "escribí tu nuevo nombre o apodo",
+                        profile.getName());
             }
             case CALLBACK_EDIT_BIRTHDATE -> {
                 user.setComando(STATE_EDIT_BIRTHDATE);
-                sender.send(update.getChatid(),
-                        "Escribí tu nueva fecha de nacimiento en formato DD/MM/AAAA, por ejemplo: 15/03/2000.");
+                sendFieldPrompt(update.getChatid(), "🎂 Fecha de nacimiento",
+                        "escribí tu nueva fecha en formato DD/MM/AAAA, por ejemplo: 15/03/2000",
+                        profile.getBirthDate() != null ? profile.getBirthDate().toString() : null);
             }
             case CALLBACK_EDIT_GENDER -> {
                 user.setComando(STATE_EDIT_GENDER);
                 List<List<Button>> buttons = Arrays.asList(
-                        Arrays.asList(new Button("Hombre", ClubRegistrationService.CALLBACK_GENDER_MALE),
-                                new Button("Mujer", ClubRegistrationService.CALLBACK_GENDER_FEMALE),
-                                new Button("Otro", ClubRegistrationService.CALLBACK_GENDER_OTHER)));
-                sender.send(update.getChatid(), "Seleccioná tu género:", true, buttons);
+                        Arrays.asList(new Button("👨 Hombre", ClubRegistrationService.CALLBACK_GENDER_MALE),
+                                new Button("👩 Mujer", ClubRegistrationService.CALLBACK_GENDER_FEMALE),
+                                new Button("⚧ Otro", ClubRegistrationService.CALLBACK_GENDER_OTHER)),
+                        cancelButtonRow());
+                sender.sendMarkdown(update.getChatid(), "*⚧ Género*\nActual: " + translateGender(profile.getGender())
+                        + "\n\nSeleccioná tu género:", true, buttons);
             }
             case CALLBACK_EDIT_ORIENTATION -> {
                 user.setComando(STATE_EDIT_ORIENTATION);
                 List<List<Button>> buttons = Arrays.asList(
-                        Arrays.asList(new Button("Hetero", ClubRegistrationService.CALLBACK_ORIENTATION_HETERO),
-                                new Button("Bi", ClubRegistrationService.CALLBACK_ORIENTATION_BI)));
-                sender.send(update.getChatid(), "Seleccioná tu orientación:", true, buttons);
+                        Arrays.asList(new Button("💕 Hetero", ClubRegistrationService.CALLBACK_ORIENTATION_HETERO),
+                                new Button("💜 Bi", ClubRegistrationService.CALLBACK_ORIENTATION_BI)),
+                        cancelButtonRow());
+                sender.sendMarkdown(update.getChatid(),
+                        "*💕 Orientación*\nActual: " + translateOrientation(profile.getOrientation())
+                                + "\n\nSeleccioná tu orientación:",
+                        true, buttons);
             }
             case CALLBACK_EDIT_CITY -> {
                 user.setComando(STATE_EDIT_CITY);
-                sender.send(update.getChatid(), "¿En qué ciudad de Bolivia estás?");
+                sendFieldPrompt(update.getChatid(), "📍 Ciudad", "escribí tu ciudad", profile.getCity());
             }
             case CALLBACK_EDIT_DESCRIPTION -> {
                 user.setComando(STATE_EDIT_DESCRIPTION);
-                sender.send(update.getChatid(), "Contanos un poco sobre vos:");
+                sendFieldPrompt(update.getChatid(), "📝 Sobre vos", "contanos un poco sobre vos",
+                        profile.getDescription());
             }
             case CALLBACK_EDIT_TASTES -> {
                 user.setComando(STATE_EDIT_TASTES);
-                sender.send(update.getChatid(), "¿Qué cosas te gustan? (música, hobbies, etc.)");
+                sendFieldPrompt(update.getChatid(), "🎸 Gustos", "contanos qué cosas te gustan (música, hobbies, etc.)",
+                        profile.getTastes());
             }
             case CALLBACK_EDIT_TRAITS -> {
                 user.setComando(STATE_EDIT_TRAITS);
-                sender.send(update.getChatid(), "¿Cómo describirías tu personalidad?");
+                sendFieldPrompt(update.getChatid(), "🧠 Personalidad", "describí tu personalidad",
+                        profile.getTraits());
             }
             case CALLBACK_EDIT_LOOKING_FOR -> {
                 user.setComando(STATE_EDIT_LOOKING_FOR);
-                sender.send(update.getChatid(), "¿Qué estás buscando?", true, LookingForOption.getButtonRows());
+                List<List<Button>> buttons = new java.util.ArrayList<>(LookingForOption.getButtonRows());
+                buttons.add(cancelButtonRow());
+                sender.sendMarkdown(update.getChatid(),
+                        "*💘 Buscando*\nActual: " + LookingForOption.translate(profile.getLookingFor())
+                                + "\n\n¿Qué estás buscando?",
+                        true, buttons);
             }
             case CALLBACK_EDIT_PHOTO -> {
                 user.setComando(STATE_EDIT_PHOTO);
-                sender.send(update.getChatid(), "Envíá una nueva foto para tu perfil.");
+                sender.sendMarkdown(update.getChatid(),
+                        "*📷 Foto*\nEnvíá una nueva foto para tu perfil. La foto actual se muestra arriba.", true,
+                        cancelButtonRowAsList());
             }
             case CALLBACK_EDIT_CONTACT -> {
                 user.setComando(STATE_EDIT_CONTACT);
                 askForContact(update.getChatid(), update.getUser(), profile);
             }
             case CALLBACK_EDIT_FINISH -> {
-                sender.send(update.getChatid(), "Tu perfil fue actualizado.", true,
-                        List.of(List.of(new Button("Volver al inicio", "/start"))));
+                sender.sendMarkdown(update.getChatid(), "✅ *Perfil actualizado*\n\n¿Querés hacer algo más?", true,
+                        List.of(
+                                List.of(new Button("🔍 Ver personas", "/ver_personas"),
+                                        new Button("✏️ Seguir editando", COMMAND_EDIT_PROFILE)),
+                                List.of(new Button("🏠 Volver al inicio", "/start"))));
                 user.setComando("start");
             }
             default -> sendEditMenu(update.getChatid(), profile);
         }
     }
 
+    private void sendFieldPrompt(String chatid, String emojiLabel, String instruction, String currentValue) {
+        StringBuilder text = new StringBuilder();
+        text.append("*").append(emojiLabel).append("*\n");
+        if (currentValue != null && !currentValue.isBlank()) {
+            text.append("Actual: ").append(escapeMarkdown(currentValue)).append("\n\n");
+        }
+        text.append(instruction).append(".");
+        sender.sendMarkdown(chatid, text.toString(), true, cancelButtonRowAsList());
+    }
+
+    private List<List<Button>> cancelButtonRowAsList() {
+        return List.of(cancelButtonRow());
+    }
+
+    private List<Button> cancelButtonRow() {
+        return List.of(new Button("❌ Cancelar edición", CALLBACK_EDIT_CANCEL));
+    }
+
     private void handleName(User user, MessageUpdate update) {
         if (isEmptyText(update)) {
-            sender.send(update.getChatid(), "Por favor, escribí tu nombre o apodo.");
+            Profile profile = requireApprovedProfile(update.getChatid());
+            sendFieldPrompt(update.getChatid(), "👤 Nombre", "escribí tu nuevo nombre o apodo",
+                    profile == null ? null : profile.getName());
             return;
         }
         Profile profile = requireApprovedProfile(update.getChatid());
@@ -272,28 +357,31 @@ public class ClubProfileEditService {
     }
 
     private void handleBirthdate(User user, MessageUpdate update) {
+        Profile profile = requireApprovedProfile(update.getChatid());
+        if (profile == null) {
+            user.setComando("start");
+            return;
+        }
         if (isEmptyText(update)) {
-            sender.send(update.getChatid(),
-                    "Por favor, escribí tu fecha de nacimiento en formato DD/MM/AAAA, por ejemplo: 15/03/2000.");
+            sendFieldPrompt(update.getChatid(), "🎂 Fecha de nacimiento",
+                    "escribí tu nueva fecha en formato DD/MM/AAAA, por ejemplo: 15/03/2000",
+                    profile.getBirthDate() != null ? profile.getBirthDate().toString() : null);
             return;
         }
         LocalDate birthDate;
         try {
             birthDate = AgeCalculator.parseUserDate(update.getText().trim());
         } catch (DateTimeParseException e) {
-            sender.send(update.getChatid(),
-                    "No entendí la fecha. Usá el formato DD/MM/AAAA, por ejemplo: 15/03/2000.");
+            sender.sendMarkdown(update.getChatid(),
+                    "❌ *Fecha no válida*\n\nUsá el formato DD/MM/AAAA, por ejemplo: 15/03/2000.", true,
+                    cancelButtonRowAsList());
             return;
         }
         Integer age = AgeCalculator.calculateAge(birthDate, null);
         if (age == null || age < MINIMUM_AGE) {
-            sender.send(update.getChatid(),
-                    "Debés ser mayor de 18 años. Por favor, ingresá una fecha válida.");
-            return;
-        }
-        Profile profile = requireApprovedProfile(update.getChatid());
-        if (profile == null) {
-            user.setComando("start");
+            sender.sendMarkdown(update.getChatid(),
+                    "❌ *Debés ser mayor de 18 años*\n\nPor favor, ingresá una fecha válida.", true,
+                    cancelButtonRowAsList());
             return;
         }
         profile.setBirthDate(birthDate);
@@ -308,27 +396,25 @@ public class ClubProfileEditService {
         }
         String gender = mapGenderCallback(update.getText());
         if (gender == null) {
-            askForGender(update.getChatid());
+            List<List<Button>> buttons = Arrays.asList(
+                    Arrays.asList(new Button("👨 Hombre", ClubRegistrationService.CALLBACK_GENDER_MALE),
+                            new Button("👩 Mujer", ClubRegistrationService.CALLBACK_GENDER_FEMALE),
+                            new Button("⚧ Otro", ClubRegistrationService.CALLBACK_GENDER_OTHER)),
+                    cancelButtonRow());
+            sender.sendMarkdown(update.getChatid(), "*⚧ Género*\nSeleccioná una opción:", true, buttons);
             return;
         }
         profile.setGender(gender);
         if (!isAllowedCombination(profile.getGender(), profile.getOrientation())) {
             profileRepository.save(profile);
             rejectProfile(profile);
-            sender.send(update.getChatid(),
-                    "La combinación de género y orientación no está permitida en el club. Tu perfil fue desactivado. Podés volver a registrarte con /club.");
+            sender.sendMarkdown(update.getChatid(),
+                    "⛔ *Combinación no permitida*\n\nLa combinación de género y orientación no está permitida en el club. Tu perfil fue desactivado. Podés volver a registrarte con /club.",
+                    true, List.of(List.of(new Button("🤝 Volver al club", "/club"))));
             user.setComando("start");
             return;
         }
         saveAndReturnToMenu(user, update, profile);
-    }
-
-    private void askForGender(String chatid) {
-        List<List<Button>> buttons = Arrays.asList(
-                Arrays.asList(new Button("Hombre", ClubRegistrationService.CALLBACK_GENDER_MALE),
-                        new Button("Mujer", ClubRegistrationService.CALLBACK_GENDER_FEMALE),
-                        new Button("Otro", ClubRegistrationService.CALLBACK_GENDER_OTHER)));
-        sender.send(chatid, "Seleccioná una opción de género:", true, buttons);
     }
 
     private void handleOrientation(User user, MessageUpdate update) {
@@ -339,36 +425,34 @@ public class ClubProfileEditService {
         }
         String orientation = mapOrientationCallback(update.getText());
         if (orientation == null) {
-            askForOrientation(update.getChatid());
+            List<List<Button>> buttons = Arrays.asList(
+                    Arrays.asList(new Button("💕 Hetero", ClubRegistrationService.CALLBACK_ORIENTATION_HETERO),
+                            new Button("💜 Bi", ClubRegistrationService.CALLBACK_ORIENTATION_BI)),
+                    cancelButtonRow());
+            sender.sendMarkdown(update.getChatid(), "*💕 Orientación*\nSeleccioná una opción:", true, buttons);
             return;
         }
         profile.setOrientation(orientation);
         if (!isAllowedCombination(profile.getGender(), profile.getOrientation())) {
             profileRepository.save(profile);
             rejectProfile(profile);
-            sender.send(update.getChatid(),
-                    "La combinación de género y orientación no está permitida en el club. Tu perfil fue desactivado. Podés volver a registrarte con /club.");
+            sender.sendMarkdown(update.getChatid(),
+                    "⛔ *Combinación no permitida*\n\nLa combinación de género y orientación no está permitida en el club. Tu perfil fue desactivado. Podés volver a registrarte con /club.",
+                    true, List.of(List.of(new Button("🤝 Volver al club", "/club"))));
             user.setComando("start");
             return;
         }
         saveAndReturnToMenu(user, update, profile);
     }
 
-    private void askForOrientation(String chatid) {
-        List<List<Button>> buttons = Arrays.asList(
-                Arrays.asList(new Button("Hetero", ClubRegistrationService.CALLBACK_ORIENTATION_HETERO),
-                        new Button("Bi", ClubRegistrationService.CALLBACK_ORIENTATION_BI)));
-        sender.send(chatid, "Seleccioná una opción de orientación:", true, buttons);
-    }
-
     private void handleCity(User user, MessageUpdate update) {
-        if (isEmptyText(update)) {
-            sender.send(update.getChatid(), "Por favor, escribí tu ciudad.");
-            return;
-        }
         Profile profile = requireApprovedProfile(update.getChatid());
         if (profile == null) {
             user.setComando("start");
+            return;
+        }
+        if (isEmptyText(update)) {
+            sendFieldPrompt(update.getChatid(), "📍 Ciudad", "escribí tu ciudad", profile.getCity());
             return;
         }
         profile.setCity(update.getText().trim());
@@ -376,13 +460,14 @@ public class ClubProfileEditService {
     }
 
     private void handleDescription(User user, MessageUpdate update) {
-        if (isEmptyText(update)) {
-            sender.send(update.getChatid(), "Por favor, escribí una descripción.");
-            return;
-        }
         Profile profile = requireApprovedProfile(update.getChatid());
         if (profile == null) {
             user.setComando("start");
+            return;
+        }
+        if (isEmptyText(update)) {
+            sendFieldPrompt(update.getChatid(), "📝 Sobre vos", "contanos un poco sobre vos",
+                    profile.getDescription());
             return;
         }
         profile.setDescription(update.getText().trim());
@@ -390,13 +475,14 @@ public class ClubProfileEditService {
     }
 
     private void handleTastes(User user, MessageUpdate update) {
-        if (isEmptyText(update)) {
-            sender.send(update.getChatid(), "Por favor, contanos qué cosas te gustan.");
-            return;
-        }
         Profile profile = requireApprovedProfile(update.getChatid());
         if (profile == null) {
             user.setComando("start");
+            return;
+        }
+        if (isEmptyText(update)) {
+            sendFieldPrompt(update.getChatid(), "🎸 Gustos", "contanos qué cosas te gustan (música, hobbies, etc.)",
+                    profile.getTastes());
             return;
         }
         profile.setTastes(update.getText().trim());
@@ -404,13 +490,13 @@ public class ClubProfileEditService {
     }
 
     private void handleTraits(User user, MessageUpdate update) {
-        if (isEmptyText(update)) {
-            sender.send(update.getChatid(), "Por favor, describí tu personalidad.");
-            return;
-        }
         Profile profile = requireApprovedProfile(update.getChatid());
         if (profile == null) {
             user.setComando("start");
+            return;
+        }
+        if (isEmptyText(update)) {
+            sendFieldPrompt(update.getChatid(), "🧠 Personalidad", "describí tu personalidad", profile.getTraits());
             return;
         }
         profile.setTraits(update.getText().trim());
@@ -425,7 +511,12 @@ public class ClubProfileEditService {
         }
         String lookingFor = LookingForOption.fromCallback(update.getText());
         if (lookingFor == null) {
-            sender.send(update.getChatid(), "¿Qué estás buscando?", true, LookingForOption.getButtonRows());
+            List<List<Button>> buttons = new java.util.ArrayList<>(LookingForOption.getButtonRows());
+            buttons.add(cancelButtonRow());
+            sender.sendMarkdown(update.getChatid(),
+                    "*💘 Buscando*\nActual: " + LookingForOption.translate(profile.getLookingFor())
+                            + "\n\n¿Qué estás buscando?",
+                    true, buttons);
             return;
         }
         profile.setLookingFor(lookingFor);
@@ -440,7 +531,9 @@ public class ClubProfileEditService {
         }
         String[] medias = update.getMedias();
         if (medias == null || medias.length == 0 || medias[0] == null || medias[0].isBlank()) {
-            sender.send(update.getChatid(), "No recibí una foto. Por favor, enviá una imagen.");
+            sender.sendMarkdown(update.getChatid(),
+                    "*📷 Foto*\n\nNo recibí una foto. Por favor, enviá una imagen.", true,
+                    cancelButtonRowAsList());
             return;
         }
         profile.setPhotoFileId(medias[0]);
@@ -458,8 +551,9 @@ public class ClubProfileEditService {
         if (ClubRegistrationService.CALLBACK_CONTACT_TELEGRAM.equals(text)) {
             String username = update.getUser();
             if (username == null || username.isBlank()) {
-                sender.send(update.getChatid(),
-                        "No tengo tu usuario de Telegram. Envíá tu número de WhatsApp para continuar.");
+                sender.sendMarkdown(update.getChatid(),
+                        "*📞 Contacto*\n\nNo tengo tu usuario de Telegram. Envíá tu número de WhatsApp para continuar.",
+                        true, cancelButtonRowAsList());
                 return;
             }
             profile.setContactUsername(username);
@@ -471,8 +565,9 @@ public class ClubProfileEditService {
             if (hasContactMethod(profile)) {
                 saveAndReturnToMenu(user, update, profile);
             } else {
-                sender.send(update.getChatid(),
-                        "Necesitamos al menos un medio de contacto. Confirmá tu Telegram o enviá tu WhatsApp.");
+                sender.sendMarkdown(update.getChatid(),
+                        "*📞 Contacto*\n\nNecesitamos al menos un medio de contacto. Confirmá tu Telegram o enviá tu WhatsApp.",
+                        true, cancelButtonRowAsList());
                 askForContact(update.getChatid(), update.getUser(), profile);
             }
             return;
@@ -485,8 +580,9 @@ public class ClubProfileEditService {
 
         String whatsapp = update.getText().trim();
         if (!isValidWhatsapp(whatsapp)) {
-            sender.send(update.getChatid(),
-                    "El número de WhatsApp no es válido. Usá solo números, espacios, guiones y el signo +. Por ejemplo: +591 70012345.");
+            sender.sendMarkdown(update.getChatid(),
+                    "❌ *WhatsApp no válido*\n\nUsá solo números, espacios, guiones y el signo +. Por ejemplo: +591 70012345.",
+                    true, cancelButtonRowAsList());
             return;
         }
         profile.setWhatsapp(whatsapp);
@@ -495,25 +591,35 @@ public class ClubProfileEditService {
 
     private void askForContact(String chatid, String username, Profile profile) {
         List<List<Button>> buttons = buildContactButtons(username);
+        String currentContact;
+        if (profile.getContactUsername() != null && !profile.getContactUsername().isBlank()) {
+            currentContact = "Telegram @" + profile.getContactUsername();
+        } else if (profile.getWhatsapp() != null && !profile.getWhatsapp().isBlank()) {
+            currentContact = "WhatsApp " + profile.getWhatsapp();
+        } else {
+            currentContact = "sin contacto";
+        }
         if (username != null && !username.isBlank()) {
-            sender.send(chatid,
-                    "Elegí cómo queres que te contacten tus matches.\nTu usuario actual: @" + username,
+            sender.sendMarkdown(chatid,
+                    "*📞 Contacto*\nActual: " + currentContact + "\n\nElegí cómo querés que te contacten tus matches.",
                     true, buttons);
         } else {
-            sender.send(chatid,
-                    "Para que tus matches puedan contactarte, enviá tu número de WhatsApp.",
+            sender.sendMarkdown(chatid,
+                    "*📞 Contacto*\nActual: " + currentContact
+                            + "\n\nPara que tus matches puedan contactarte, enviá tu número de WhatsApp.",
                     true, buttons);
         }
     }
 
     private List<List<Button>> buildContactButtons(String username) {
+        List<List<Button>> buttons = new java.util.ArrayList<>();
         if (username != null && !username.isBlank()) {
-            return Arrays.asList(
-                    Arrays.asList(new Button("Usar Telegram @" + username,
-                            ClubRegistrationService.CALLBACK_CONTACT_TELEGRAM)),
-                    Arrays.asList(new Button("Usar WhatsApp", ClubRegistrationService.CALLBACK_CONTACT_SKIP)));
+            buttons.add(List.of(new Button("✈️ Usar Telegram @" + username,
+                    ClubRegistrationService.CALLBACK_CONTACT_TELEGRAM)));
         }
-        return List.of();
+        buttons.add(List.of(new Button("📱 Usar WhatsApp", ClubRegistrationService.CALLBACK_CONTACT_SKIP)));
+        buttons.add(cancelButtonRow());
+        return buttons;
     }
 
     private boolean hasContactMethod(Profile profile) {
